arranged functions into object

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 				<!-- a hanged man -->
 			    <div class="col-sm-6">
-				
+					<div>orz</div>
 			    </div>
 				
 				<!-- a foreboding message -->
