Added variables to object

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- Title --> 
 
 		<header class="text-center container-fluid">
-		  <h1>Horror Hangman</h1>
+		  <h1 class="big-big">Horror Hangman</h1>
 		</header>
 
 		
@@ -35,12 +35,12 @@
 
 				<!-- a hanged man -->
 			    <div class="col-sm-6">
-					<div>orz</div>
+					<div></div>
 			    </div>
 				
 				<!-- a foreboding message -->
 			    <div class="col-sm-6">
-
+					<div></div>
 			    </div>
 
 			 </div>
