--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 			    </div>
 
 			 </div>
-			 <div class="row">
+			 <div class="row" id="stats">
 
-				<!-- a hanged man -->
+				<!-- Wins -->
 			    <div class="col-sm-6">
 					<h3>Wins: <span id="wins"></span></h3>
 			    </div>
 				
-				<!-- a foreboding message -->
+				<!-- Failures -->
 			    <div class="col-sm-6">
 					<h3>Failures: <span id="fails"></span></h3>
 			    </div>
@@ -60,13 +60,10 @@
 
 		</div>
 	
-		<!-- A place for testing -->
+		<!-- A place for guessing -->
 
 		<div id="guessing" class="text-center container-fluid">
-		  <h3 id="wrongs"></h3>
-		  <div id="input-div">
-		    <input id="input"></input><button id="submit">Submit</button>
-		  </div>
+		  <h3>Guesses Remaining: <span id="wrongs"></span></h3>
 		</div>
 
 		<!-- Alphabet board -->
