--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Butcherman" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
-	
+	<body>	
 
-	<body>
-		
 		<!-- Title --> 
 
 		<header class="text-center container-fluid">
@@ -90,7 +88,7 @@
 		      <button id="m" class="btn letter">M</button>
 		    </div>  
 		  </div>
-		  <div class="row" id="lmn">
+		  <div id="nop" class="row">
 		    <div class="col-sm-12">
 		      <button id="n" class="btn letter">N</button>
 		      <button id="o" class="btn letter">O</button>
@@ -101,7 +99,7 @@
 		      <button id="t" class="btn letter">T</button>
 		    </div>
 		  </div>    
-		  <div class="row" id="lmn">
+		  <div id="uvx" class="row">
 		    <div class="col-sm-12">
 		      <button id="u" class="btn letter">U</button>
 		      <button id="v" class="btn letter">V</button>
