--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
 				<!-- a hanged man -->
 			    <div class="col-sm-6">
-					<div></div>
+					<div id="white" class="text-center container-fluid">
+						<div id="orz">orz</div>
+					</div>
 			    </div>
 				
 				<!-- a foreboding message -->
