Added speach bubble

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 				<!-- a hanged man -->
 			    <div class="col-sm-6">
 					<div id="white" class="text-center container-fluid">
+						<div id="help">Oh god. Please help me!!</div>
 						<div id="orz">orz</div>
 					</div>
 			    </div>
